tryna add the files

--- a/contact.html
+++ b/contact.html
@@ -4,25 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GreenBite | Contact</title>
-  <link rel="stylesheet" href="/css/contact.css">
-  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="./css/contact.css">
+  <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-  <script defer src="/js/contact.js"></script>
+  <script defer src="./js/contact.js"></script>
 </head>
 <body>
   <header>
     <nav class="navbar">
       <div class="logo-section">
-        <div><img src="/images/logo.jpeg" alt="logo" class="logo-img"></div>
+        <div><img src="./images/logo.jpeg" alt="logo" class="logo-img"></div>
         <div class="logo">GreenBite</div>
       </div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="calculator.html">Calculator</a></li>
-        <li><a href="workouts.html">Workouts</a></li>
-        <li><a href="mindfulness.html">Mindfulness</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./recipes.html">Recipes</a></li>
+        <li><a href="./calculator.html">Calculator</a></li>
+        <li><a href="./workouts.html">Workouts</a></li>
+        <li><a href="./mindfulness.html">Mindfulness</a></li>
+        <li><a href="./contact.html" class="active">Contact</a></li>
       </ul>
       <div class="hamburger"><span></span><span></span><span></span></div>
     </nav>
@@ -40,7 +40,7 @@
 
     <h2>Our Headquarters</h2>
     <div class="hq-container">
-      <img src="/images/greenbite_hq.png" alt="GreenBite HQ" />
+      <img src="./images/greenbite_hq.png" alt="GreenBite HQ" />
       <p>GreenBite HQ: 123 Healthy Ave, Wellness City, WB 90210</p>
     </div>
 
