--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
     <nav class="navbar">
       <div class="logo-section">
         <div>
-          <img src="/images/logo.jpeg" alt="logo" class="logo-img">
+          <img src="./images/logo.jpeg" alt="logo" class="logo-img">
         </div>
         <div class="logo">GreenBite</div>
       </div>
       <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="calculator.html">Calculator</a></li>
-        <li><a href="workouts.html">Workouts</a></li>
-        <li><a href="mindfulness.html">Mindfulness</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="./index.html" class="active">Home</a></li>
+        <li><a href="./recipes.html">Recipes</a></li>
+        <li><a href="./calculator.html">Calculator</a></li>
+        <li><a href="./workouts.html">Workouts</a></li>
+        <li><a href="./mindfulness.html">Mindfulness</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
       <div class="hamburger">
         <span></span><span></span><span></span>
@@ -73,13 +73,13 @@
       <a href="recipes.html" class="btn-link">Learn More →</a>
     </div>
     <div class="feature-card">
-      <img id="recipe-image2" src="/images/gym.png" alt="gym-Image">
+      <img id="recipe-image2" src="./images/gym.png" alt="gym-Image">
       <h3>Workout Plans</h3>
       <p>Stay active with personalized workout routines for every fitness level.</p>
       <a href="workouts.html" class="btn-link">Learn More →</a>
     </div>
     <div class="feature-card">
-      <img id="recipe-image1" src="/images/mindfullness.png" alt="mindfullness-Image">
+      <img id="recipe-image1" src="./images/mindfullness.png" alt="mindfullness-Image">
       <h3>Mindfulness</h3>
       <p>Find calm and focus with guided breathing, meditation, and more.</p>
       <a href="mindfulness.html" class="btn-link">Learn More →</a>
