--- a/recipes.html
+++ b/recipes.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GreenBite | Recipes</title>
 
-  <link rel="stylesheet" href="/css/header.css">
-  <link rel="stylesheet" href="/css/recipes.css">
+  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/recipes.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
 
-  <script defer src="/js/utils.js"></script>
-  <script defer src="/js/recipes.js"></script>
+  <script defer src="./js/utils.js"></script>
+  <script defer src="./js/recipes.js"></script>
 </head>
 <body>
  
@@ -22,12 +22,12 @@
         <div class="logo">GreenBite</div>
       </div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a class="active" href="recipes.html">Recipes</a></li>
-        <li><a href="calculator.html">Calculator</a></li>
-        <li><a href="workouts.html">Workouts</a></li>
-        <li><a href="mindfulness.html">Mindfulness</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a class="active" href="./recipes.html">Recipes</a></li>
+        <li><a href="./calculator.html">Calculator</a></li>
+        <li><a href="./workouts.html">Workouts</a></li>
+        <li><a href="./mindfulness.html">Mindfulness</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
       <div class="hamburger"><span></span><span></span><span></span></div>
     </nav>
