--- a/calculator.html
+++ b/calculator.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GreenBite • Calculator</title>
-  <link rel="stylesheet" href="/css/calculator.css">
-  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="./css/calculator.css">
+  <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
-  <script defer src="/js/utils.js"></script>
-  <script defer src="/js/calculator.js"></script>
+  <script defer src="./js/utils.js"></script>
+  <script defer src="./js/calculator.js"></script>
 </head>
 <body>
   
@@ -18,16 +18,16 @@
 
     <nav class="navbar">
        <div class="logo-section">
-        <div><img src="/images/logo.jpeg" alt="logo" class="logo-img"></div>
+        <div><img src="./images/logo.jpeg" alt="logo" class="logo-img"></div>
         <div class="logo">GreenBite</div>
       </div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="calculator.html" class="active" >Calculator</a></li>
-        <li><a href="workouts.html">Workouts</a></li>
-        <li><a href="mindfulness.html">Mindfulness</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./recipes.html">Recipes</a></li>
+        <li><a href="./calculator.html" class="active" >Calculator</a></li>
+        <li><a href="./workouts.html">Workouts</a></li>
+        <li><a href="./mindfulness.html">Mindfulness</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
       <div class="hamburger">
         <span></span><span></span><span></span>
