--- a/workouts.html
+++ b/workouts.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GreenBite • Workout</title>
-  <link rel="stylesheet" href="/css/workouts.css">
-  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="./css/workouts.css">
+  <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
-  <script defer src="/js/utils.js"></script>
-  <script defer src="/js/workouts.js"></script>
+  <script defer src="./js/utils.js"></script>
+  <script defer src="./js/workouts.js"></script>
 </head>
 <body>
 <header>
@@ -20,12 +20,12 @@
       <div class="logo">GreenBite</div>
     </div>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="recipes.html">Recipes</a></li>
-      <li><a href="calculator.html">Calculator</a></li>
-      <li><a href="workouts.html" class="active">Workouts</a></li>
-      <li><a href="mindfulness.html">Mindfulness</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./recipes.html">Recipes</a></li>
+      <li><a href="./calculator.html">Calculator</a></li>
+      <li><a href="./workouts.html" class="active">Workouts</a></li>
+      <li><a href="./mindfulness.html">Mindfulness</a></li>
+      <li><a href="./contact.html">Contact</a></li>
     </ul>
     <div class="hamburger"><span></span><span></span><span></span></div>
   </nav>
@@ -84,7 +84,7 @@
   
 </main>
 
-<audio id="beep" src="assets/sounds/beep.mp3"></audio>
+
 
 
 <footer>
