tryna add the files

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   
   <section class="features-container">
     <div class="feature-card">
-      <img id="recipe-image3" src="/images/healthyfoods.png" alt="healthyfoods-Image">
+      <img id="recipe-image3" src="./images/healthyfoods.png" alt="healthyfoods-Image">
 
       <h3>Healthy Recipes</h3>
       <p>Discover delicious and nutritious meals tailored to your lifestyle.</p>
