tryna add the files

--- a/workouts.html
+++ b/workouts.html
@@ -16,7 +16,7 @@
 <header>
   <nav class="navbar">
     <div class="logo-section">
-      <div><img src="/images/logo.jpeg" alt="logo" class="logo-img"></div>
+      <div><img src="./images/logo.jpeg" alt="logo" class="logo-img"></div>
       <div class="logo">GreenBite</div>
     </div>
     <ul class="nav-links">
