--- a/recipes.html
+++ b/recipes.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/recipes.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   
-  <script src="./js/recipes.js" defer-></script>
+  <script src="./js/recipes.js" defer></script>
 </head>
 <body>
  
