tryna add the files

--- a/recipes.html
+++ b/recipes.html
@@ -12,7 +12,25 @@
   <script src="./js/recipes.js" defer></script>
 </head>
 <body>
- 
+ <nav class="navbar">
+      <div class="logo-section">
+        <div>
+          <img src="./images/logo.jpeg" alt="logo" class="logo-img">
+        </div>
+        <div class="logo">GreenBite</div>
+      </div>
+      <ul class="nav-links">
+        <li><a href="./index.html" class="active">Home</a></li>
+        <li><a href="./recipes.html">Recipes</a></li>
+        <li><a href="./calculator.html">Calculator</a></li>
+        <li><a href="./workouts.html">Workouts</a></li>
+        <li><a href="./mindfulness.html">Mindfulness</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+      <div class="hamburger">
+        <span></span><span></span><span></span>
+      </div>
+    </nav>
   <div class="search-bar container">
     <input type="text" id="search-input" placeholder="Search recipes..." />
     <select id="category-filter">
