tryna add the files

--- a/recipes.html
+++ b/recipes.html
@@ -11,7 +11,7 @@
 
 
 
-  <script defer src="/js/recipes.js"></script>
+  <script defer src="./js/recipes.js"></script>
 </head>
 <body>
  
@@ -66,6 +66,7 @@
     </div>
   </div>
   </section>
+  <section>
   <div id="recipe-modal" class="modal">
   <div class="modal-content">
     <button class="close-btn">&times;</button>
@@ -83,7 +84,9 @@
     <table id="nutrition-table"></table>
   </div>
 </div>
- </section> 
+  </section>
+
+
   <footer>
     <div class="footer-content container">
       <div class="footer-left">
